Extract the 2nd non dependent module : Note module

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
 		<module>domain</module>
 		<module>web</module>
+		<module>note</module>
 	</modules>
     <packaging>pom</packaging>
 
