--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 		<module>domain</module>
 		<module>web</module>
 		<module>note</module>
+		<module>hotel</module>
+		<module>restaurant</module>
 	</modules>
     <packaging>pom</packaging>
 
